--- a/views/jade/excercise.jade
+++ b/views/jade/excercise.jade
@@ -4,23 +4,22 @@ block content
     .content
       .container
         .page-header
-          h1 Select queries
+          h3 Упражнения на выборку
         .row-fluid
           .span4.debug
             .ex-question.debug
-                h4 excercise #: #{excercise.id}
-                | #{excercise.question}
+                h4 упражнение #: #{excercise.id}
+                p #{excercise.question}
             .ex-help.debug
-                h4 help articles:
+                h4 для справки:
                 ul
                     - for(var i=0;i<excercise.helps.length;++i) {
                         - var help=excercise.helps[i];
                         li
-                            a(href='../helps/#{help.rel}') #{help.name}
+                            a(href='../help/#{excercise.helps[i]}') #{chapters[excercise.helps[i]].title}
                     - }
-                | #{excercise.question}
           .span8.debug
             .ex-query
                 h5 query window
                 .query-inner.debug
-                    textarea#query-area
+                    textarea#query-area #{config.defaultExcerciseTextAreaContent}
