--- a/views/jade/index.jade
+++ b/views/jade/index.jade
@@ -13,7 +13,7 @@ block content
                     p Графы - абстрактные модели данных, описывающие структурные отношения между объектами. Сегодня графы широко используются для моделировании данных в различных предметных областях, требующих выяснения и определения правил и схем отношений объектов. Такими предметными областями являются социальные сети, семантический Web, базы знаний, сети белок-белковых взаимодействий, библиографические сети и т. д.
                     p Постоянно растущий объем плохо структурированных данных требует наличия инструментов для их обработки в виде NoSQL базы данных и языка запросов, позволяющего манипулировать этими данными.
                     p Задача этого ресурса - знакомство с сетевой моделью данных на примере СУБД Neo4j.
-                    p <b>Neo4j</b> - это надежная и высокопроизводительная нереляционная ACID база данных, поддерживающая возможность манипуляции данными на собственном языке запросов <b>&quotCypher&quot</b>. Упражнения будут построены на основе ее языка запросов. При выполнении каждого упражнения будут даваться ссылки на обучающие материалы.
+                    p <b>Neo4j</b> - это надежная и высокопроизводительная нереляционная ACID база данных, поддерживающая возможность манипуляции данными на собственном языке запросов <b>&quotCypher&quot</b>. Упражнения будут построены на основе ее языка запросов версии 1.9.5. При выполнении каждого упражнения будут даваться ссылки на обучающие материалы.
 
 
 
