--- a/views/jade/index.jade
+++ b/views/jade/index.jade
@@ -20,8 +20,4 @@ block content
 
                 .span3.right-column
                     .column-header
-                        | Statistics
-                    | asdsfsasds fsasdsfsasdsfs asdsfsasdsf sasdsfsasdsfsa
-                    | asdsfsasds fsasdsfsasdsfs asdsfsasdsf sasdsfsasdsfsa
-                    | asdsfsasds fsasdsfsasdsfs asdsfsasdsf sasdsfsasdsfsa
-                    | asdsfsasds fsasdsfsasdsfs asdsfsasdsf sasdsfsasdsfsa
+                        | RIGHT
