--- a/views/jade/excercise.jade
+++ b/views/jade/excercise.jade
@@ -23,3 +23,40 @@ block content
                 h5 query window
                 .query-inner.debug
                     textarea#query-area #{config.defaultExcerciseTextAreaContent}
+        .row-fluid.debug
+          .span6.debug
+            h4 Правильный ответ:
+            //svg#correct_svg.debug
+          .span6.debug
+            h4 Результат выполнения запроса:
+            //svg#result_svg.debug
+            textarea#result_json(autofocus)
+
+    script(type='text/javascript').
+      var queryArea, resultSvg, resultDiv;
+      var counter=0;
+      function formatJSONString(inp){
+        return inp//.replace("{","<p>{").replace("}","}</p>");
+      }
+      function sendQuery(){
+          console.log(queryArea.val());
+          ++counter;
+          $.post( "../ex-check", { query: queryArea.val()})
+            .done(function( data ) {
+              console.log( "Data Loaded: ", data );
+              resultDiv.val(JSON.stringify(data,null,4));
+            });
+      }
+      $(document).ready(function () {
+        queryArea=$('#query-area');
+        resultSvg=$('#result_svg');
+        resultDiv=$('#result_json');
+        queryArea.focus();
+        $('#query-area').keydown(function (e) {
+
+          if (e.ctrlKey && e.keyCode == 13) {
+            // Ctrl-Enter pressed
+            sendQuery();
+          }
+        });
+      });
