--- a/views/jade/sign_in.jade
+++ b/views/jade/sign_in.jade
@@ -5,12 +5,12 @@ block content
     .content
         .container
             .page-header
-                h1 Signin to Bootbusiness
+                h1 Вход
             .row
                 .span6.offset3
                     h4.widget-header
                         i.icon-lock
-                        | Signin to Bootbusiness
+                        | Вход
                     .widget-body
                         .center-align
                             if error
