--- a/public/stylesheets/layout.css
+++ b/public/stylesheets/layout.css
@@ -282,43 +282,87 @@ footer {
   width: 100%;
   margin: 0px auto;
 }
-.container>.row{
+
+.container>.row {
   text-indent: 2em;
 }
-.chapter-content,.chapter-content>*{
+
+.chapter-content, .chapter-content>* {
   text-indent: 2em;
   text-align: justify;
 }
-.code{
+
+.code {
   font-weight: 900;
 }
-.comment{
+
+.comment {
   color: darkgreen;
 }
-.syntax{
+
+.syntax {
   color: darkblue;
 }
-.warning{
+
+.warning {
   color: darkred;
 }
-.cypher{
+
+.cypher {
   color: #000000;
-}.result{
-   font-weight: 700;
+}
+
+.result {
+  font-weight: 700;
   background-color: lightgray;
- }
-#result_json{
+}
+
+#result_json {
   min-height: 200px;
   width: 95%;
   margin: 0px auto;
 }
- #result_json>*{
-   border: 1px green solid;
-   text-indent: 1em;
- }
 
- #modal.svg_modal{
-   width: 100px;
-   height: 100px;
-   background-color: red;
- }
+#result_json>* {
+  border: 1px green solid;
+  text-indent: 1em;
+}
+
+.ddb {
+  border: 1px green solid;
+}
+.user-test>*{
+  position: relative;
+}
+#result_svg, #result_svg>* {
+  z-index: 100;
+background-color: rgba(124, 141, 242, 0.26);
+}
+
+#result-modal {
+  border-radius: 5px;
+  position: fixed;
+  top:300px;
+  left: 100%;
+  right: 20px;
+  height: 200px;
+  background-color: rgba(27, 39, 169, 0.21);
+  padding: .7em;
+  text-indent: .3em;
+  width: 200px;
+}
+.span6>h4 {
+  text-indent: 1em;
+}
+
+#m-props {
+  color: #000000;
+}
+
+#m-head {
+  color: #00008B;
+}
+td.prop,td.val{
+  width: 40%;
+  border: 1px #000000 solid;
+}
