--- a/views/jade/excercise.jade
+++ b/views/jade/excercise.jade
@@ -68,7 +68,7 @@ block content
                 }
               }
                 console.log(width);
-                modal.css('width',3*width+'px');
+                //modal.css('width',5*width+'px');
               if(counter==0){
                 modalTable.append('<tr><td>selected node has no properties</td></tr>');
               }
