--- a/views/jade/help_index.jade
+++ b/views/jade/help_index.jade
@@ -12,6 +12,6 @@ block content
               - var ex = helps[i];
               li
                  h4
-                    a(href="/help/#{ex.id}")
+                    a(href="/help/#{i}")
                       | #{ex.title}
             - }
