--- a/views/jade/layout.jade
+++ b/views/jade/layout.jade
@@ -35,12 +35,12 @@ html
                       a(href="../sign_up") Регистрация
                   else
                     li.dropdown
-                      a(href="#", class="dropdown-toggle", data-toggle="dropdown") #{cookies.n}
+                      a(href="#", class="dropdown-toggle", data-toggle="dropdown") #{user.name}
                         b.caret
                       ul.dropdown-menu
                         li.nav-header ПРОФИЛЬ
                         li
-                          a(href="../user/#{cookies.id}")=cookies.n
+                          a(href="../user/#{user.id}")=user.name
                         li
                           a(href="../logout") Выход
                     - console.log(role);
